0.4.0
- Auffällige Nährstoffe werden in Liste farbig gemalt
- Programmstart verbessert
- Optionen --help --version --debug hinzugefügt

0.3.1
- Gesamtmenge wird richtig angezeigt
- Programm lässt sich zuverlässiger beenden
- Eingaben für Futtermengen rechtsbündig
- Info Dialog

0.3.0
- compiliert jetzt auch mit mingw für Windoofs
- eigene Rationstypen für Färsen und Bullen
- Futtermittel können bearbeitet werden
- Rationen können besser bearbeitet werden
- Alle Rationen haben eine Listenansicht
- Bessere Tabverwaltung
- Beim Schließen der Tabs wird nachgefragt
- Zahlen werden besser gerundet
- Viele kleine Verbesserungen
- lirab.ico hinzugefügt (für mingw)

0.2.0
- compiliert jetzt auch mit glib >= 2.44
- Es können mehrere Rationen als Tab geladen werden
- Futtermittel haben mehr Inhaltsstoffe
- Anzahl der Tiere wird abgespeichert
- Drucken geht auch ohne Deckblatt
- Viele kleine Verbesserungen

0.1.0
- Erste veröffentlichte Version
- Grundfunktionen gehen