@@ -1,6 +1,6 @@
 # This file was auto generated by Valama 0.1.2. Do not modify it.
 set(project_name "Lirab")
-set(Lirab2_VERSION "0.1.0")
+set(Lirab_VERSION "0.4.0")
 set(required_pkgs
   "cairo"
   "glib-2.0"
