@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.16.0 on Fri Mar  3 20:07:40 2017 -->
+<!-- Generated with glade 3.16.0 on Wed Jul 26 14:42:41 2017 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <object class="GtkAdjustment" id="adjustment1">
@@ -900,6 +900,7 @@
   </object>
   <object class="GtkWindow" id="window2">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Ration</property>
     <child>
       <object class="GtkGrid" id="grid8">
         <property name="visible">True</property>
@@ -1072,6 +1073,7 @@
   </object>
   <object class="GtkWindow" id="window3">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Futtermittel</property>
     <property name="modal">True</property>
     <child>
       <object class="GtkGrid" id="grid1">
@@ -1193,6 +1195,7 @@
   </object>
   <object class="GtkWindow" id="window4">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Rationen</property>
     <child>
       <object class="GtkGrid" id="grid2">
         <property name="visible">True</property>
@@ -1330,6 +1333,7 @@
   </object>
   <object class="GtkWindow" id="window5">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Futtermittel</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="type_hint">dialog</property>
