@@ -2,6 +2,7 @@
 - Auffällige Nährstoffe werden in Liste farbig gemalt
 - Programmstart verbessert
 - Optionen --help --version --debug hinzugefügt
+- Mittel- und Rationverwaltung verbessert
 
 0.3.1
 - Gesamtmenge wird richtig angezeigt
